# smooth-humanoid-locomotion

./: LICENSE  README.md
deployment/gr1-real/: .gitignore  README.md
deployment/gr1-real/deploy_models/: gr1-deploy.pt
deployment/gr1-real/scripts/: config.yaml  convert_gains.py  gr1_deploy_phase.py  gr1_robot.py  set_home.py
deployment/gr1-real/utils/: joystick.py  util_func.py
simulation/: .gitignore  README.md
simulation/legged_gym/: .gitignore
simulation/legged_gym/legged_gym/: .gitignore  README.md  __init__.py
simulation/legged_gym/legged_gym/envs/: __init__.py
simulation/legged_gym/legged_gym/gym_utils/: helpers.py  motor_delay_fft.py  task_registry.py  terrain.py
simulation/legged_gym/legged_gym/scripts/: eval.sh  mujoco_sim.sh  play.py  run.sh  save_jit.py  sim2sim.py  to_jit.sh  train.py
simulation/legged_gym/legged_gym/tests/: test_asset.py  test_env.py
simulation/legged_gym/resources/robots/berkeley_humanoid/: CMakeLists.txt  README.md  package.xml
simulation/legged_gym/resources/robots/berkeley_humanoid/config/: default.yaml
simulation/legged_gym/resources/robots/berkeley_humanoid/config/rviz/: standalone.rviz
simulation/legged_gym/resources/robots/berkeley_humanoid/launch/: empty_world.launch  load.launch  standalone.launch
simulation/legged_gym/resources/robots/berkeley_humanoid/urdf/: config.json  gazebo.urdf  ll_faa.scad  ll_haa.scad  ll_hfe.scad  ll_kfe.scad  lr_faa.scad  lr_haa.scad  lr_hfe.scad  lr_kfe.scad  robot.urdf  robot.xml  torso.scad
simulation/rsl_rl/rsl_rl/algorithms/: __init__.py  ppo.py  ppo_rma.py
(+27 files in other folders)
